fix overflow on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .theme-dark .App{
@@ -23,7 +23,10 @@ body {
 
 .main {
   width: 30%;
-  margin: 50px auto;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding-bottom: 50px;
+
 }
 
 span.theme {
